<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="circle_start">0f</string>
    <string name="circle_end">360f</string>
    <string name="circle_middle">180f</string>
    <string name="download">Download</string>
    <string name="glide_text">Glide - Image Looading Library by BumpTech</string>
    <string name="loadApp_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_text">Retrofit - Type-safe HTTP client for Android and Java by Sqaure Inc.</string>

    <!--URLs and labels-->
    <string name="glide_label">Glide - Image Loading Library by BumpTech</string>
    <string name="glide_url">https://github.com/bumptech/glide/archive/master.zip</string>
    <string name="loadApp_label">LoadApp - Current repository by Udacity</string>
    <string name="loadApp_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter/archive/master.zip</string>
    <string name="retrofit_label">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="retrofit_url">https://github.com/square/retrofit/archive/master.zip</string>

    <!--Notification strings-->
    <string name="app_notification_channel_id" > app_channel</string>
    <string name="app_notification_channel_name">NanoDegree App</string>
    <string name="notif_desc">Selected file is now downloading</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="key">KEY</string>
    <string name="back_key">BACK</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="done">Done</string>
    <string name="party_balloons">party balloons</string>
    <string name="happy_smiley_face">happy smiley face</string>
    <string name="tap_anywhere">Tap anywhere</string>
    <string name="other_url">Some other URL?</string>
    <string name="download_done">Your download is ready. Click notification to view</string>

</resources>
